--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </ul>
         </div>
         <div class="buy-now">
-            <button>Buy Now</button>
+            <a href="https://5a704f-69.myshopify.com/" target="_blank"><button>Buy Now</button></a>
         </div>
     </div>
 </body>
